# vlm-kotlin

./: .gitignore  .pre-commit-config.yaml
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/androidTest/java/com/kabilan108/vlmClient/: ExampleInstrumentedTest.kt
android-app/app/src/main/java/com/kabilan108/vlmClient/: MainActivity.kt
android-app/app/src/main/java/com/kabilan108/vlmClient/ui/theme/: Color.kt  Theme.kt  Type.kt
android-app/app/src/test/java/com/kabilan108/myapplication/: ExampleUnitTest.kt
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
android-app/scripts/: connect-device.sh  debug_app.sh  disconnect.sh
server/: Dockerfile  pyproject.toml
server/app/: deps.py  jobs.py  logging.py  main.py
server/notebooks/: test-job_queue.ipynb  test-model-minicpm.ipynb
server/scripts/: download_model.py
server/tests/: test_endpoints.py
