[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "numpy==1.26.4",
    "pillow==10.1.0",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "transformers==4.40.0",
    "sentencepiece==0.1.99",
    "datasets==2.21.0",
    "pydantic==2.8.2",
    "fastapi[standard]==0.112.2",
    "uvicorn==0.30.6",
    "flash-attn==2.6.3",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
dev-dependencies = [
    "jiwer==3.0.4",
    "jupyter==1.0.0",
    "pytest-asyncio==0.24.0",
    "pytest==8.3.2",
    "rich==13.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
